[package]
name = "prototype_safe_app_nodejs"
version = "0.1.0"
authors = ["hunterlester <guilfordhunter@gmail.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "prototype_safe_app_nodejs"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.20"

[dependencies]
neon = "0.1.20"
safe_core = "0.27.0"
maidsafe_utilities = "0.5.2"
ffi_utils = "0.3.0"

[features]
testing = ["safe_core/testing"]
use-mock-routing = ["testing", "safe_core/use-mock-routing"]
default = ["use-mock-routing"]
