[package]
name = "safe_app_neon"
version = "0.1.0"
authors = ["hunterlester <guilfordhunter@gmail.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "safe_app_neon"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.20"

[dependencies]
neon = "0.1.20"
safe_core = "0.27.0"
maidsafe_utilities = "0.14.1"
ffi_utils = "0.3.0"
system_uri = "0.2.2"
serde_json = "1.0"

[features]
testing = ["safe_core/testing"]
use-mock-routing = ["testing", "safe_core/use-mock-routing"]
default = ["use-mock-routing"]
